# studlk

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
studlk/: __init__.py  main.py  run.py
studlk/alembic/: env.py
studlk/alembic/versions/: 2025_06_20_1150-4a0bed8bbb1a_initial_revision.py  2025_06_20_1410-ef3b20970b4d_add_student_table.py
studlk/app/: __init__.py  router.py
studlk/app/common/: __init__.py  health.py
studlk/app/student/: __init__.py
studlk/app/student/api/: router.py
studlk/app/student/api/v1/: __init__.py  router.py  student.py
studlk/app/student/model/: __init__.py  student.py
studlk/app/student/schema/: student.py
studlk/common/: __init__.py  model.py  response.py  schema.py
studlk/core/: config.py  logging.py
studlk/database/: __init__.py  db.py
test_queries/: insert_test_values.sql
