[project]
name = "studlk"
version = "0.1.0"
description = "Aсинхронное веб приложение для учёта студентов"
authors = [
    {name = "PGuin",email = "138515193+pguin-sudo@users.noreply.github.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uvicorn (>=0.34.3,<0.35.0)",
    "fastapi (>=0.115.13,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
]

[tool.ruff]
target-version = "py313"
cache-dir = ".ruff.cache"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["RUF001", "RUF002", "EXE002", "D103", "D104", "TD"]
extend-select = ["I"] 

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
